--- a/src/mainboard/lenovo/t540p/Kconfig
+++ b/src/mainboard/lenovo/t540p/Kconfig
@@ -28,6 +28,10 @@ config USBDEBUG_HCD_INDEX # FIXME: check this
 	int
 	default 2
 
+config DRIVER_LENOVO_SERIALS
+	bool
+	default n
+
 config PS2K_EISAID
 	default "LEN0071"
 
