--- a/src/mainboard/lenovo/t540p/Kconfig
+++ b/src/mainboard/lenovo/t540p/Kconfig
@@ -7,6 +7,8 @@ config BOARD_SPECIFIC_OPTIONS
 	select EC_LENOVO_PMH7
 	select HAVE_ACPI_RESUME
 	select HAVE_ACPI_TABLES
+	select HAVE_CMOS_DEFAULT
+	select HAVE_OPTION_TABLE
 	select INTEL_INT15
 	select MAINBOARD_HAS_LIBGFXINIT # FIXME: check this
 	select NORTHBRIDGE_INTEL_HASWELL
