--- a/src/mainboard/lenovo/t540p/Kconfig
+++ b/src/mainboard/lenovo/t540p/Kconfig
@@ -12,6 +12,7 @@ config BOARD_SPECIFIC_OPTIONS
 	select INTEL_INT15
 	select MAINBOARD_HAS_LIBGFXINIT # FIXME: check this
 	select NORTHBRIDGE_INTEL_HASWELL
+	select NO_UART_ON_SUPERIO
 	select SERIRQ_CONTINUOUS_MODE
 	select SOUTHBRIDGE_INTEL_LYNXPOINT
 	select SYSTEM_TYPE_LAPTOP
