mb/lenovo/t540p/Kconfig: we do have TPM module (TESTME)
Signed-off-by: Peter Lemenkov <lemenkov@gmail.com>

--- a/src/mainboard/lenovo/t540p/Kconfig
+++ b/src/mainboard/lenovo/t540p/Kconfig
@@ -11,6 +11,8 @@ config BOARD_SPECIFIC_OPTIONS
 	select HAVE_OPTION_TABLE
 	select INTEL_INT15
 	select MAINBOARD_HAS_LIBGFXINIT # FIXME: check this
+	select MAINBOARD_HAS_TPM1
+	select MEMORY_MAPPED_TPM
 	select NORTHBRIDGE_INTEL_HASWELL
 	select NO_UART_ON_SUPERIO
 	select SERIRQ_CONTINUOUS_MODE
