mb/lenovo/t540p/Kconfig: enable GbE firmware (TESTME)
Signed-off-by: Peter Lemenkov <lemenkov@gmail.com>

--- a/src/mainboard/lenovo/t540p/Kconfig
+++ b/src/mainboard/lenovo/t540p/Kconfig
@@ -12,6 +12,7 @@ config BOARD_SPECIFIC_OPTIONS
 	select INTEL_INT15
 	select MAINBOARD_HAS_LIBGFXINIT # FIXME: check this
 	select MAINBOARD_HAS_TPM1
+	select MAINBOARD_USES_IFD_GBE_REGION
 	select MEMORY_MAPPED_TPM
 	select NORTHBRIDGE_INTEL_HASWELL
 	select NO_UART_ON_SUPERIO
