mb/lenovo/t540p: add VBT
Signed-off-by: Peter Lemenkov <lemenkov@gmail.com>
Change-Id: I6bd367af4cb31c893720623d2bb4feec2917367f

--- a/src/mainboard/lenovo/t540p/Kconfig
+++ b/src/mainboard/lenovo/t540p/Kconfig
@@ -11,6 +11,7 @@ config BOARD_SPECIFIC_OPTIONS
 	select HAVE_ACPI_TABLES
 	select HAVE_CMOS_DEFAULT
 	select HAVE_OPTION_TABLE
+	select INTEL_GMA_HAVE_VBT
 	select INTEL_INT15
 	select MAINBOARD_HAS_LIBGFXINIT # FIXME: check this
 	select MAINBOARD_HAS_TPM1
